<resources>
    <string name="app_name">Памятка срочника</string>

    <string name="btn_ntk">Нужно знать</string>
    <string name="btn_physical_training">Физическая подготовка</string>
    <string name="btn_check_yourself">Проверь себя</string>

    <string name="btn_know_by_heart">Знать наизусть</string>
    <string name="btn_about">Общая информация</string>
    <string name="btn_weapons_n_regulations">Оружие и нормативы</string>

    <string name="header_hymn">Гимн РФ</string>
    <string name="header_oath">Присяга</string>
    <string name="header_glory_days">Дни воинской славы</string>
    <string name="header_rank_test">Тест на звания</string>
    <string name="header_pull_ups">Подтягивания</string>
    <string name="header_lifting">Подъем с переворотом</string>
    <string name="header_push_ups">Отжимания</string>
    <string name="header_run_1000">Бег 1 км</string>
    <string name="header_run_100">Бег 100 м</string>
    <string name="header_mark">Оценка физ подг.</string>
    <string name="header_result">Ваш результат</string>

    <string name="table_mark">оценка</string>
    <string name="table_3">3 упр</string>
    <string name="table_4">4 упр</string>
    <string name="table_5">5 упр</string>
    <string name="table_great">отл</string>
    <string name="table_fine">хор</string>
    <string name="table_satis">удовл</string>

    <string name="content_hymn">Россия - священная наша держава,\nРоссия - любимая наша страна.\nМогучая воля, великая слава -\nТвое достоянье на все времена!\nПрипев:\nСлавься, Отечество наше свободное,\nБратских народов союз вековой,\nПредками данная мудрость народная!\nСлавься, страна! Мы гордимся тобой!\nОт южных морей до полярного края\nРаскинулись наши леса и поля. Одна ты\nна свете! Одна ты такая – Хранимая Богом\nродная земля!\nПрипев.\nШирокий простор для мечты и для жизни\nГрядущие нам открывают года. Нам силу даёт\nнаша верность Отчизне. Так было, так есть и так\nбудет всегда!</string>
    <string name="content_oath">Я, (фамилия, имя, отчество), торжественно присягаю на верность своему Отечеству – Российской Федерации. Клянусь свято соблюдать Конституцию Российской Федерации, строго выполнять требования воинских уставов, приказы командиров и начальников. Клянусь достойно исполнять воинский долг, мужественно защищать свободу, независимость и конституционный строй России, народ и Отечество.</string>
    <string name="content_glory_days">27 января 1944 г. — День снятия блокады города Ленинграда;\n2 февраля 1943 г. — День разгрома советскими войсками немецко-\nфашистских войск в Сталинградской битве;\n23 февраля 1918 г. — День победы Красной Армии над кайзеровскими\nвойсками Германии — День защитника Отечества;\n18 апреля 1242 г. — День победы русских воинов князя Александра\nНевского над немецкими рыцарями на Чудском озере (Ледовое побоище);\n9 мая 1945 г. — День Победы советского народа в Великой\nОтечественной войне 1941 — 1945 годов;\n10 июля 1709 г. — День победы русской армии под командованием\nПетра Первого над шведами в Полтавском сражении;\n9 августа 1714 г. — День первой в российской истории морской\nпобеды русского флота под командованием Петра Первого над шведами у\nмыса Гангут;\n23 августа 1943 г. — День разгрома советскими войсками немецко-\nфашистских войск в Курской битве;\n8 сентября 1812 г. — День Бородинского сражения русской армии под\nкомандованием М.И. Кутузова с французской армией;\n11 сентября 1790 г. — День победы русской эскадры под\nкомандованием Ф.Ф. Ушакова над турецкой эскадрой у мыса Тендра;\n21 сентября 1380 г. — День победы русских полков во главе с великим\nкнязем Дмитрием Донским над монголо-татарскими войсками в Кули-\nковской битве;\n4 ноября — День народного единства;\n7 ноября 1612 г. — День освобождения Москвы силами народного\nополчения под руководством Кузьмы Минина и Дмитрия Пожарского от\nпольских интервентов;\n1 декабря 1853 г. — День победы русской эскадры под командованием\nП.С. Нахимова над турецкой эскадрой у мыса Синоп;\n5 декабря 1941 г. — День начала контрнаступления советских войск\nпротив немецко-фашистских войск в битве под Москвой;\n24 декабря 1790 г. — День взятия турецкой крепости Измаил\nрусскими войсками под командованием А.В. Суворова.</string>
    <string name="content_ak">1 - Ствольная коробка\n2 - Крышка ствольной коробки\n3 - Возвратный механизм\n4 - Затворная рама с газовым поршнем\n5 - Газовая трубка со ствольной накладкой\n6 - Затвор\n7 - Шомпол\n8 - Магазин</string>
</resources>