<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/header"
                android:layout_marginHorizontal="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/header_hymn"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/button"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/content_hymn"
                    android:textColor="#000"
                    android:textSize="23sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/header"
                android:layout_marginHorizontal="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/header_oath"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                android:background="@drawable/button"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/content_oath"
                    android:textColor="#000"
                    android:textSize="23sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>