<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rect">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_mark"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_3"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_4"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_5"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-1dp"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rect">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_great"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="170"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="230"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="280"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-1dp"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rect">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_fine"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="150"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="200"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="250"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-1dp"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/rect">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/table_satis"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="120"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="170"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="-1dp"
            android:background="@drawable/rect">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="220"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>